assets/css/style.css
body {
    font-family: 'Montserrat', sans-serif;
    background-color: #fcfcfc;
    color:#848c91;
}

* { 
    box-sizing: border-box;
}

.hero-image {
    background-image: url("/assets/images/background.jpg");
    background-size: cover;
    min-height: 80vh;
    position: relative;
    background-attachment: fixed;
    background-repeat: no-repeat;
    background-position: center;
}

.hero-text {
    text-align: center;
    position: absolute;
    top: 50%;
    left: 50%;
    font-size: 150%;
    color: #fafafa;
    transform: translate(-50%, -50%);
}

.overlay {
    background-color: rgba(0, 0, 0, .2);
    top: 0;
    left: 0;
    width: 50%;
    height: 50%;
}

nav {
    padding-left: 10px;
}

a {
    text-decoration: none;
    color:#848c91;
}

/* Home page content --------------------------------------------------*/
/*
.page-content {
    margin: 50px;
*/

.text-column {
    width: 50%;
    float: left;
}

.row::after {
    content: "";
    display: table;
    clear: both;
  }

.image-column {
    width: 50%;
    float: left;
}

.house-picture {
    width: 100%;
}

.classes-button {
    background-color: #fafafa;
    border: 1px solid #848c91;
    border-radius: 15px;
    padding: 5px;
}

.classes-button:hover {
    background-color: #848c91;
}

.classes-button:hover a {
    color: #fafafa;
}



/* Class page grid ---------------------------------------------------*/


.class-page-grid {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
    grid-auto-rows: auto;
    gap: 10px;
    width: 90%;
    margin: 20px auto;
    justify-content: center;
    overflow: hidden;
}

.class-page-grid .class-description {
    background-color: #c0ced6
}

.class-page-grid .grid-image img {
    min-height: 0;
    object-fit: cover;
    max-width: 100%;
}

.class-page-grid hr {
    grid-area: 2 / 1 / span 1 / span 2;
}

/* Media Queries ------------------------------------------------------*/

@media (max-width: 768px) {
    .hero-image {
        min-height: 60vh;
    }
}

@media screen and (max-width: 768px) {
.text-column {
    width: 100%;
    float: left;
}

.row::after {
    content: "";
    display: table;
    clear: both;
  }

.image-column {
    width: 100%;
    float: left;
}

.house-picture {
    width: 100%;
}

.search-box {
    display: none;
}
}

/* Footer -------------------------------------------------------------*/

footer {
    background-color: #fafafa;
    position: sticky;
    bottom: 0;
}

.socials {
    text-align: center;
}

.socials li {
    display: inline;
}

.socials i {
    color:#848c91;
    padding: 5px;
    margin: 10px;
    font-size: 180%;
    text-decoration: none;
}

.socials i:hover {
    color: #6c7074;
}

